--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
 h1 {
   color: #39ff14;
-  font-size: 200px
+  font-size: 200px;
 }
 h3 {
   color: #ff69b4;
+  font-size: 80px;
 }
 body {
   background-color: brown;
